--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ form button {
 .card {
   margin: 10px auto;
   padding: 16px;
-  min-width: 350px;
+  min-width: 320px;
   width: 100%;
   border: 1px solid #2C1C6B;
   border-radius: 1.5rem;
@@ -132,7 +132,8 @@ form button {
   align-items: center;
 }
 
-.more-info button {
+.more-info button,
+.main-repo-search button {
   padding: 0.5rem 1rem;
   height: 100%;
   margin-left: 2px;
@@ -142,7 +143,8 @@ form button {
   border-radius: 10px;
 }
 
-.more-info button:hover {
+.more-info button:hover,
+.main-repo-search button {
   cursor: pointer;
   background-color: #3b2b7a;
 }
@@ -192,7 +194,7 @@ form button {
     flex-direction: row;
   }
 
-  form input,
+  /* form input, */
   form button {
     width: auto;
   }
